k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: default
  annotations:
    # Logs activés → très utile pour comprendre ce qui se passe
    nginx.ingress.kubernetes.io/enable-access-log: "true"

    # Forwarde correctement les headers (Host, X-Forwarded-For, etc.)
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"

    # Permet des POST JSON un peu plus gros si besoin
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"

spec:
  ingressClassName: nginx

  rules:
  - host: myapp.local
    http:
      paths:
        # 1. Tout ce qui commence par /api → backend
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: identity-service
              port:
                number: 8080

        # 2. Tout le reste → frontend (y compris /, /assets, /vite.svg, etc.)
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
